--- a/SlayerWxEngine/SlayerWxEngine.vcxproj.filters
+++ b/SlayerWxEngine/SlayerWxEngine.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClCompile Include="Src\model\Model.cpp">
       <Filter>Src\model</Filter>
     </ClCompile>
+    <ClCompile Include="Src\model\Mesh.cpp">
+      <Filter>Src\model</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\baseGame\BaseGame.h">
@@ -243,6 +246,9 @@
       <Filter>Src\dataManager</Filter>
     </ClInclude>
     <ClInclude Include="Src\model\Model.h">
+      <Filter>Src\model</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\model\Mesh.h">
       <Filter>Src\model</Filter>
     </ClInclude>
   </ItemGroup>
