--- a/SlayerWxEngine/SlayerWxEngine.vcxproj
+++ b/SlayerWxEngine/SlayerWxEngine.vcxproj
@@ -38,6 +38,7 @@
     <ClCompile Include="Src\light\Light.cpp" />
     <ClCompile Include="Src\model\Mesh.cpp" />
     <ClCompile Include="Src\model\Model.cpp" />
+    <ClCompile Include="Src\model\ModelLoader.cpp" />
     <ClCompile Include="Src\renderer\renderer.cpp" />
     <ClCompile Include="Src\shader\Shader.cpp" />
     <ClCompile Include="Src\shape\Shape.cpp" />
@@ -70,6 +71,8 @@
     <ClInclude Include="Src\light\Light.h" />
     <ClInclude Include="Src\model\Mesh.h" />
     <ClInclude Include="Src\model\Model.h" />
+    <ClInclude Include="Src\model\ModelLoader.h" />
+    <ClInclude Include="Src\model\ModelStruct.h" />
     <ClInclude Include="Src\renderer\renderer.h" />
     <ClInclude Include="Src\shader\Shader.h" />
     <ClInclude Include="Src\shape\Shape.h" />
