--- a/SlayerWxEngine/SlayerWxEngine.vcxproj.filters
+++ b/SlayerWxEngine/SlayerWxEngine.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClCompile Include="Src\model\Mesh.cpp">
       <Filter>Src\model</Filter>
     </ClCompile>
+    <ClCompile Include="Src\model\ModelLoader.cpp">
+      <Filter>Src\model</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\baseGame\BaseGame.h">
@@ -249,6 +252,12 @@
       <Filter>Src\model</Filter>
     </ClInclude>
     <ClInclude Include="Src\model\Mesh.h">
+      <Filter>Src\model</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\model\ModelLoader.h">
+      <Filter>Src\model</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\model\ModelStruct.h">
       <Filter>Src\model</Filter>
     </ClInclude>
   </ItemGroup>
