--- a/SlayerWxEngine/SlayerWxEngine.vcxproj
+++ b/SlayerWxEngine/SlayerWxEngine.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Src\animatorController\Animation\Animation.cpp" />
     <ClCompile Include="Src\animatorController\Frame\Frame.cpp" />
     <ClCompile Include="Src\baseGame\BaseGame.cpp" />
+    <ClCompile Include="Src\bsp\BSP.cpp" />
     <ClCompile Include="Src\bsp\BspPlane.cpp" />
     <ClCompile Include="Src\camera\Camera.cpp" />
     <ClCompile Include="Src\cube\Cube.cpp" />
@@ -51,6 +52,7 @@
     <ClInclude Include="Src\animatorController\Animation\Animation.h" />
     <ClInclude Include="Src\animatorController\Frame\Frame.h" />
     <ClInclude Include="Src\baseGame\BaseGame.h" />
+    <ClInclude Include="Src\bsp\BSP.h" />
     <ClInclude Include="Src\bsp\BspPlane.h" />
     <ClInclude Include="Src\camera\Camera.h" />
     <ClInclude Include="Src\cube\Cube.h" />
